--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,10 @@ body :-ms-input-placeholder {
   background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   position: absolute;
-  top: 30%;
+  top: 22%; /* top: 30%  x*/
   left: 0;
   width: 100%;
-  height: 660px;
+  height: 100%; /* height: 660px*/
   margin-top: -200px;
   overflow: hidden;
 }
@@ -65,9 +65,9 @@ body :-ms-input-placeholder {
   transform: translateY(50px);
 }
 .container {
-  max-width: 600px;
+  max-width: 800px;	/* max-width: 600px; */
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 60px 0;	/* padding: 20px 0; */
   height: 400px;
   text-align: center;
 }
@@ -95,7 +95,7 @@ table input {
   margin: 0 auto 10px auto;
   display: block;
   text-align: center;
-  font-size: 13px;
+  font-size: 16px;
   color: white;
   transition-duration: 0.25s;
   font-weight: 300;
@@ -118,7 +118,7 @@ table button {
   border-radius: 3px;
   width: 250px;
   cursor: pointer;
-  font-size: 13px;
+  font-size: 16px;
   transition-duration: 0.25s;
 }
 table button:hover {
