--- a/css/style2.css
+++ b/css/style2.css
@@ -9,9 +9,9 @@
 }
 */
 .circle-wrap {
-    margin-top: 0px;
+    margin-top: 30px;  /*  margin-top: 70px;  */
     margin-right: auto;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     margin-left: auto;
     width: 150px;
     height: 150px;
