--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body :-ms-input-placeholder {
   top: 22%; /* top: 30%  x*/
   left: 0;
   width: 100%;
-  height: 100%; /* height: 660px*/
+  height: 1000px; /* height: 660px*/
   margin-top: -200px;
   overflow: hidden;
 }
